--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 				</div>
 			</div>
 		</div>
-		<script src="https://unpkg.com/vue@2/dist/vue.js"></script>
+		<script src="vue.min.js"></script>
 		<script src="https://unpkg.com/element-ui/lib/index.js"></script>
 
 		<script>
